# main

./: 1lab.cpp  data.txt  lab1  lab1.cpp
lab2/: CMakeLists.txt  ImportWindow.cpp  ImportWindow.h  addfiledialog.cpp  addfiledialog.h  mainwindow.cpp  mainwindow.h
lab3/: CMakeLists.txt  main.cpp
lab3/model/: File.cpp  FileManagerModel.h
lab3/view/: AddFileDialog.cpp  AddFileDialog.h  ImportWindow.cpp  ImportWindow.h  MainWindow.cpp  data.txt
model/: File.h  FileManagerModel.cpp
tests/: test_model.cpp
view/: MainWindow.h
